[package]
edition = "2021"
name = "dragonglass"
version = "0.1.0"

[workspace]
default-members = ["apps/*"]
members = ["crates/*", "apps/*"]

[dependencies]
dragonglass_app = {path = "crates/dragonglass_app"}
dragonglass_dependencies = {path = "crates/dragonglass_dependencies"}
dragonglass_gui = {path = "crates/dragonglass_gui"}
dragonglass_render = {path = "crates/dragonglass_render"}
dragonglass_world = {path = "crates/dragonglass_world"}
