[package]
edition = "2021"
name = "dragonglass_app"
version = "0.1.0"

[dependencies]
dragonglass_dependencies = {path = "../dragonglass_dependencies"}
dragonglass_gui = {path = "../dragonglass_gui"}
dragonglass_render = {path = "../dragonglass_render"}
dragonglass_world = {path = "../dragonglass_world"}
